# kibitz

./: .gitignore  .rvmrc  README.md
config/: test-worker-b.yaml  test-worker-d.yaml
script/: Gemfile  check_count  kibitz  run-locator  run-regression-test  run-test-worker  run-test-worker-a-1  run-test-worker-a-2  run-test-worker-b-1  run-test-worker-init-node  run-test-workers  setup-collaboration.rb  shutdown-workers.rb  start-collaboration.rb  validate
src/: CMakeLists.txt  basic_collaboration_message.cpp  basic_collaboration_message.hpp  bindings.hpp  bus.cpp  bus.hpp  collaboration_message.hpp  common.cpp  common.hpp  constants.hpp  context.cpp  context.hpp  heartbeat.cpp  heartbeat.hpp  heartbeat_receiver.cpp  heartbeat_receiver.hpp  heartbeat_sender.cpp  heartbeat_sender.hpp  in_edge.cpp  in_edge.hpp  in_edge_manager.cpp  in_edge_manager.hpp  inproc_notification_message.cpp  inproc_notification_message.hpp  job_initialization_message.cpp  job_initialization_message.hpp  kibitz.cpp  kibitz.hpp  kibitz_util.cpp  kibitz_util.hpp  locator.cpp  locator.hpp  message.cpp  message.hpp  message_base.cpp  message_base.hpp  notification_message.hpp  registry.cpp  registry.hpp  regression_tester.cpp  (+19 more)
test/traversal/: test-worker-b.yaml  test-worker-c.yaml  test-worker-d.yaml
